# zeiss_tiff_meta

./: .gitignore  README.md  __init__.py  pyproject.toml  test.tif  zeiss tiff demo.ipynb  zeisstiffmeta demo.ipynb  zeisstiffmeta.py
zeisstiffmeta/: __init__.py  zeisstiffmeta.py
